# chakra_mcp

./: .env.example  .gitignore  LICENSE  LICENSING.md  README.md  Taskfile.yml  netlify.toml  skills-lock.json
.github/: dependabot.yml
.github/workflows/: cli-ci.yml  cli-release.yml  codeql.yml  frontend-ci.yml  sdk-go-ci.yml  sdk-go-release.yml  sdk-py-ci.yml  sdk-py-release.yml  sdk-rust-ci.yml  sdk-rust-release.yml  sdk-ts-ci.yml  sdk-ts-release.yml  sqlx-prepare-check.yml
backend/: Cargo.toml  README.md  docker-compose.yml
backend/.sqlx/: query-0035ddc26972c15cc65610c528d4342df4282da076254c3f0b64b0ee7b1025c4.json  query-016712b99f6dab99fca14f49f21f16ea28da0ae838215cf7505ce16656bc9685.json  query-01d27baf797817394df87baeee232de164af18df919acfccfd01eb0018495d8e.json  query-022a0af45e8d538fed0513e4ea2d28e99a990fcd505547d0415522cc637a44a7.json  query-05ba807e4ec96318b702b9f79945866d52bcb68a38cc97ed043bcd6c22dc1f7b.json  query-0669b95e8a4bf293fcb02a1be4ffe3e325981c4cf15dfe407dd42a5fc6014ed2.json  query-0843304927ec39765c6e308fe9e128a8b31378660e70fe1109e17e957797a1c2.json  query-08b4080d7bf35db56863a52053a8433a1dcc18440249dd27fe8162ab53640c49.json  query-098a6598a870f460109c00895a0c2717b0f7ecf56326388dbb23a4fe6a761d8d.json  query-0a18b4fda1b511ad89f31cbc6c258581991524e9bebe1f2bdb7f6efdaaf3e8d4.json  query-0add8936ef412a226fc824e4863863052aaa5960d363e62a9100dd5b8ed6cffd.json  query-0b8e290184083b9af931fd85fae01fc345d1406b2417ffac3779421a8761d767.json  query-0ba11c2984db33ab742947565c9330194572ba01800116b52f49f3c405d591d8.json  query-0d8787e0350bf0630e82e27f367a4c9627044c3b3d503b47039a1680d0f43b04.json  query-0efe14c8d66f6aa87689146aa5906853d91ab45c8b975cd02a7d8de2b5c973c7.json  query-0f1b73ff7df7aed0154aefef6c893e737fbc784e9f9bf38c6ce942a8bc2b78a7.json  query-10cc2fd31f9cd9d303ee35eea12b395652a5a8b5c8f987b6f933017e200de63a.json  query-116d9fd660c771fc05ce4df2e421507ec17aaaf1d61e6146e00919415413db52.json  query-13d2897ec563bbc29ccc9036a2b57b6c45950761eb9af339720555069dff9c75.json  query-152dda4d8f987a4636ad14d228cb4031956a0387669ab834c6beec009bedd58d.json  query-161dc1e9cb5a9474f62ca27e707488881a4db601dccc73fb1eb955304591801c.json  query-18995c625eb44564739b68605e2d3e46a74e36a7931e31a2abfa3b6ea6614fae.json  query-18a981b09c0248d1e2a02b85131b26def6974476bc578e6e56df20402f28060f.json  query-1955a16c83c004a2002dff4a4308fbaac14366d71e44adb0f8644d1c09eb2898.json  query-1a242a1e3b44c08b2ffaecf3e6dc396c28da278840d5110ad7d6add5e36a06e6.json  query-1a7a7a74865050c6515327d7a4ad4ce30441d4f0341ed47e6bb670f28456ed47.json  query-1b919c396d94bee6c9535f8731f910d7a688de2ad0775da7c0aeee9495588388.json  query-1e1b636874c0055376cbc2b4576f6dda235bbcb397310e10a7fc46f93ccc31e0.json  query-1ea1eb5888a98e63a4818374a460b0afd8eebbd8498a39499e86ce35c9ad5111.json  query-1f280f5a2e055837edc13bbd05cac967a87c0cc4db43381f9a903708a4d99b75.json  query-2060621778b96362a4f290ffff3ddb641cd16c2fdc270f7b8102c99fc7f2c782.json  query-23bdd99969ffe5ac4da7e650a399cbf790c974caac2c0a725793b6b2f6f28970.json  query-23c209abc4a1e650100849d1c6543377694c97994fc06eb94a29d482fd5fa40d.json  query-257e6d0bafabd31215c79924a9b741366025ff5157c9c48ace816da1c53bee36.json  query-25aeb3dd20dc10f325ee2b594830a1cb858118ee1781a41de294bea4cfd2f462.json  query-2876642f42aa0ec77a0d799d489052e6ebbd6b815f7d50e473df7f69a7ad3466.json  query-2b6f3cfd9a7351b90af843f9ca0b7f5a9547ff9d798cfebf5de102b3ca733cdb.json  query-2b9cc4605aaba9110b29a524dd9036719e6339bc1d66451854ab6445bc6cee6a.json  query-2bbed6802ba01821011f72495653b32f4b5c57f7ded83045e7171e1defad834d.json  query-2bc82f271a0817160840a4d07da6a79784f24977c1729dad03d27c32e181ad5a.json  (+175 more)
backend/app/: Cargo.toml
backend/app/src/: auth.rs  lib.rs  main.rs  state.rs
backend/app/src/handlers/: admin.rs  api_keys.rs  auth.rs  health.rs  mod.rs  oauth.rs  orgs.rs  surveys.rs  users.rs
backend/cli/: Cargo.toml
backend/cli/src/: auth.rs  client.rs  config.rs  main.rs  onboarding.rs  ui.rs
backend/cli/src/commands/: agents.rs  configure.rs  friendships.rs  grants.rs  inbox.rs  invoke.rs  mod.rs  networks.rs
backend/migrations/: 0001_users_and_orgs.sql  0002_surveys.sql  0003_agents.sql  0004_friendships.sql  0005_grants.sql  0006_invocations.sql  0007_inbox_invocations.sql  0008_oauth.sql  0009_a2a_discovery_schema.sql  0010_a2a_discovery_check_constraint.sql  0011_relay_signing_keys.sql  0012_agent_card_last_attempted_at.sql  0013_discovery_search.sql
backend/relay/: Cargo.toml
backend/relay/src/: auth.rs  forwarder.rs  inbox_bridge.rs  jwt_mint.rs  lib.rs  main.rs  state.rs
backend/relay/src/agent_card/: fetcher.rs  keys.rs  mod.rs  refresh_job.rs  signer.rs  synthesizer.rs  types.rs
backend/relay/src/handlers/: a2a.rs  agents.rs  capabilities.rs  discovery.rs  friendships.rs  grants.rs  health.rs  invoke.rs  jwks.rs  mcp.rs  mod.rs  published_cards.rs
backend/relay/src/policy/: decision.rs  evaluator.rs  mod.rs
backend/server/: Cargo.toml
backend/server/src/: main.rs
backend/shared/: Cargo.toml
backend/shared/src/: config.rs  db.rs  error.rs  jwt.rs  lib.rs  tracing_init.rs
docs/: INSTALL.md  chakramcp-build-spec.md  chakramcp-investor-roadmap.md
docs/ChakraMCP Design System/: README.md  SKILL.md
docs/specs/: 2026-04-29-discovery-design.md  2026-04-29-discovery-implementation-plan.md  2026-04-29-migration-to-a2a.md
examples/: README.md
examples/python-langchain/: README.md  pyproject.toml
examples/python-langchain/src/chakramcp_example/: __init__.py  agent.py  relay_client.py
examples/rust-rig/: Cargo.toml  README.md
examples/rust-rig/src/: main.rs  relay.rs
examples/scheduler-demo/: .gitignore  README.md  alice_scheduler.py  bob_caller.py  requirements.txt  (+1 more)
frontend/: .env.example  .gitignore  netlify.toml  package.json  pnpm-lock.yaml
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/src/chakramcp/: __init__.py  _async.py  _errors.py  _sync.py  _types.py
sdks/python/tests/: test_smoke.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: client.rs  error.rs  inbox.rs  lib.rs  resources.rs  types.rs
sdks/rust/tests/: smoke.rs
(+188 files in other folders)
