[package]
name = "chakramcp-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "chakramcp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
directories = "5"
url = "2"
webbrowser = "1"
owo-colors = "4"
dialoguer = { version = "0.11", default-features = false, features = ["password"] }
indicatif = "0.17"
