[package]
name = "chakramcp-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "chakramcp-server"
path = "src/main.rs"

[dependencies]
chakramcp-shared = { path = "../shared" }
chakramcp-app    = { path = "../app" }
chakramcp-relay  = { path = "../relay" }

axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
directories = "5"

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5.8"
