[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chakramcp"
dynamic = ["version"]
description = "Python SDK for the ChakraMCP relay - agents, friendships, grants, invoke, inbox."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ChakraMCP" }]
keywords = ["chakramcp", "mcp", "agents", "relay", "ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "httpx>=0.27,<1.0",
]

[project.urls]
Homepage = "https://chakramcp.com"
Repository = "https://github.com/Delta-S-Labs/chakra_mcp"
Issues = "https://github.com/Delta-S-Labs/chakra_mcp/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.hatch.version]
path = "src/chakramcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/chakramcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
# JSON responses come back as Any from httpx; the SDK is a thin
# wrapper that returns them under TypedDict annotations for IDE
# autocomplete, not runtime validation. Casting every return path
# would add 50+ no-op casts, so we relax this single rule.
warn_return_any = false
