[package]
name = "chakramcp"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for the ChakraMCP relay — agents, friendships, grants, invoke, inbox."
homepage = "https://chakramcp.com"
repository = "https://github.com/Delta-S-Labs/chakra_mcp"
documentation = "https://docs.rs/chakramcp"
readme = "README.md"
keywords = ["chakramcp", "mcp", "agents", "relay", "ai"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
tokio-util = { version = "0.7", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
url = "2"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
httpmock = "0.7"
serial_test = "3"
